Fixed header on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,9 +24,10 @@ body {
 .header {
     display: flex;
     justify-content: center;
+    align-items: center;
+    height: max-content;
 }
 .title {
-    text-align: center;
     font-size: 3em;
     color: var(--grey4);
 }
